--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://biainthew.github.io/movies"
+  "homepage": "https://biainthew.github.io"
 }
